fix horizontal scrollbar bug

--- a/css/gum.css
+++ b/css/gum.css
@@ -14,7 +14,7 @@ body {
 	margin-right: 0px; /*auto*/
 	margin-left: 0px; /*auto*/
 	margin-bottom: 60px;
-	width: 100%; /*832px*/
+	
 	min-height: 100%;
 	height: 100%;
 	z-index: 2;
